--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-awareness:15.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:27.1.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.8.2'
+    compile 'com.squareup.picasso:picasso:2.5.0'
 }
